--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
       
         <h3 id="micro.MyService">MyService</h3>
-        <p></p>
+        <p>My first service chceck syntax</p><p>/Request string querry</p><p>/Response string message</p>
         <table class="enum-table">
           <thead>
             <tr><td>Method Name</td><td>Request Type</td><td>Response Type</td><td>Description</td></tr>
